GoalBasedMvc/deploy/deployments/nodeport-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: goalbasedmvc
  labels:
    app: goalbasedmvc  
spec:
  type: NodePort
  selector:
    app: goalbasedmvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goalbasedmvc
  labels:
    app: goalbasedmvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goalbasedmvc
  template:
    metadata:
      labels:
        app: goalbasedmvc
    spec:
      containers:
      - name: goalbasedmvc
        image: poppertech/goalbasedmvc:latest
      imagePullSecrets:
      - name: regcred

# add connection string
# kubectl apply -f C:/Users/bwynn/Documents/GoalBasedMvc/GoalBasedMvc/deploy/deployments/nodeport-deployment.yaml
# http://localhost:30001/
