GoalBasedMvc/deploy/deployments/ingress-deployment.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goalbasedmvc-ingress
spec:
  rules:
  - host: ingress.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: goalbasedmvc
              port:
                number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: goalbasedmvc
  labels:
    app: goalbasedmvc  
spec:
  selector:
    app: goalbasedmvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goalbasedmvc
  labels:
    app: goalbasedmvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goalbasedmvc
  template:
    metadata:
      labels:
        app: goalbasedmvc
    spec:
      containers:
      - name: goalbasedmvc
        image: poppertech/goalbasedmvc:latest
      imagePullSecrets:
      - name: regcred

# add connection string
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.44.0/deploy/static/provider/cloud/deploy.yaml
# kubectl apply -f C:/Users/bwynn/Documents/GoalBasedMvc/GoalBasedMvc/deploy/deployments/ingress-deployment.yaml
# http://ingress.local/

# teardown
# kubectl delete all --all -n=ingress-nginx
# kubectl delete all --all
